revised according to reviewer comments

--- a/acks.tex
+++ b/acks.tex
@@ -1,5 +1,4 @@
-\section*{Acknowledgement}
+\section*{Acknowledgements}
 \label{sec:acks}
-
-This work has been partially supported by NSF grant XXXXX, the Rutgers Green Computing Initiative, and
-the BSC-CNS Severo Ochoa program and the TIN2012- 34557 project.
+\red{This work has been partially supported by NSFC grant No. 61363019, NSF grant XXXXX, the Rutgers Green Computing Initiative, and
+the BSC-CNS Severo Ochoa program and the TIN2012- 34557 project. }
