--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,7 +1,7 @@
 \section{Conclusion}
 \label{sec:conclusion}
 
-In this paper, we proposed that new renewable powered datacenters should be placed intelligently while considering their impact on the electricity transmission system (along with other datacenter capital and operation costs).  Specifically, we studied the potential impact of new datacenters on the New England ISO transmission system.  Using simulation, we show that different placements of a new datacenter and its offsetting wind farm can lead to increased overloading of transmission lines, grid voltage variations outside the acceptable range, and transmission system losses.  Thus, strategic placement of new renewable powered datacenters can be beneficial for both grid operators and datacenters owners.  We developed an optimization framework for the placement of a new datacenter and offsetting wind farm.  Simulation results show that considering the impact on the grid transmission system can lead to costs savings of tens of millions of dollars, and avoid overloading of transmission lines and unacceptable grid voltage variations.
+In this paper, we proposed that new renewable powered datacenters should be placed intelligently while considering their impact on the electricity transmission system (along with other datacenter capital and operation costs).  Specifically, we studied the potential impact of new datacenters on the New England ISO transmission system.  Using simulation, we show that different placements of a new datacenter and its offsetting wind farm can lead to increased overloading of transmission lines, grid voltage variations outside the acceptable range, and transmission system losses.  Thus, strategic placement of new renewable powered datacenters can be beneficial for both grid operators and datacenters owners.  We developed an optimization framework for the placement of a new datacenter and offsetting wind farm\red{, which can be easily extended to simultaneous placement of multiple data centers and multiple wind farms}.  Simulation results show that considering the impact on the grid transmission system can lead to costs savings of tens of millions of dollars, and avoid overloading of transmission lines and unacceptable grid voltage variations. \red{This helps to give instructions for the service providers to do practical capacity planning when building new datacenters with wind farms in a certain area of the transmission grid system.}
 
 
 %%% Local Variables:
