--- a/paper.tex
+++ b/paper.tex
@@ -32,8 +32,9 @@
 \newcommand{\thunote}[1]{{\textcolor{cyan}{Thu: #1}}}
 \newcommand{\xynote}[1]{{\textcolor{orange}{XW: #1}}}
 \newcommand{\mdnote}[1]{{\textcolor{darkgreen}{Md: #1}}}
-\newcommand{\ricardonote}[1]{{\textcolor{red}{Ricardo: #1}}}
+\newcommand{\ricardonote}[1]{{\textcolor{brown}{Ricardo: #1}}}
 \newcommand{\divyanote}[1]{{\textcolor{violet}{Divya: #1}}}
+\newcommand{\red}[1]{{\textcolor{red}{#1}}}
 
 \newcommand{\myparagraph}[1]{\noindent {\bf #1}}
 
@@ -55,26 +56,26 @@
 
 % Thu: Anonymity for double-blind review.
 %
-% \author{
-% \IEEEauthorblockN{Xiaoying Wang} \IEEEauthorblockA{Department of
-%   Computer \\
-% Technology and Applications \\
-% Qinghai University, China\\
-% Email: wxy\_cta@qhu.edu.cn
-% }
-% \and
-% \IEEEauthorblockN{Md E. Haque, \'I\~nigo Goiri, \\ Ricardo
-% Bianchini, Thu D. Nguyen} \IEEEauthorblockA{Department of Computer Science\\
-% Rutgers University, USA\\
-% Email: \{mdhaque, goiri, ricardob, \\
-% tdnguyen\}@cs.rutgers.edu
-% }
-% \and
-% \IEEEauthorblockN{Divya Kurthakoti Chandrashekhara}
-% \IEEEauthorblockA{Siemens Corporate Research, USA\\
-% Email: div.s.sya@gmail.com
-% }
-% }
+ \author{
+ \IEEEauthorblockN{Xiaoying Wang} \IEEEauthorblockA{Department of
+   Computer \\
+ Technology and Applications \\
+ Qinghai University, China\\
+ Email: wxy\_cta@qhu.edu.cn
+ }
+ \and
+ \IEEEauthorblockN{Md E. Haque, \'I\~nigo Goiri, \\ Ricardo
+ Bianchini, Thu D. Nguyen} \IEEEauthorblockA{Department of Computer Science\\
+ Rutgers University, USA\\
+ Email: \{mdhaque, goiri, ricardob, \\
+ tdnguyen\}@cs.rutgers.edu
+ }
+ \and
+ \IEEEauthorblockN{Divya Kurthakoti Chandrashekhara}
+ \IEEEauthorblockA{Siemens Corporate Research, USA\\
+ Email: div.s.sya@gmail.com
+ }
+ }
 
 
 % \IEEEpubid{978‐1‐4799‐0623‐9/13/\$31.00~\copyright~2013 IEEE}
@@ -97,7 +98,7 @@
 \input{placement}
 \input{related}
 \input{conclusion}
-%\input{acks}
+\input{acks}
 
 \bibliographystyle{IEEEtran}
 \bibliography{paper}
